--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,15 @@
     background-color: #d0d6d1;  
 }
 
+nav, nav ul, nav ul li, .nav-left a, nav ul li img, .nav-right {
+    background-color: #fff;
+}
+
 nav {
-    background-color:white;
     display: flex;
     align-items: center;
     height: 10vh;
-    width: 100vw;
+    width: 100%;
 }
 
 nav ul {
@@ -23,64 +26,65 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 25px;
+    margin-right: 20px;
     font-size: 20px;
+}
+.nav-left {
+    margin-left: 5%;
+    flex: 60%; 
+}
+
+.nav-left a {
+    color: black;
 }
 
 nav ul li .home{
-    background-color: white;
-    color: black;
     font-weight: bolder;
 }
 
-nav ul li .myproject{
-    background-color: white;
-    color: black;
+nav ul li .myproject{   
     font-weight: 500;
 }
 
-.nav-left {
-    margin-left: 80px;
-    flex: 50%; 
-}
-
 .nav-right { 
-    flex: 50%;
+    flex: 40%;
     text-align: end;
     margin-right: 100px;
 }
 
 .nav-right a {
     background-color: black;
-    width: 100px;
-    font-size: 20px;
+    width: 80px;
     color: white;
-    padding: 8px 30px;
-    border-radius: 10px;
+    font-size: 20px;
+    padding: 8px 20px;
+    margin-right: -30px;
+    border-radius: 8px;
 }
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    margin-top: 5vh;
+    height: 80vh;
+}
 
+section,section .left, section h1, section .right, section .icon, section .right img, section p {
+    background-color: #fff;
 }
 
 section{  
     display: flex;
     width: 90%;
-    box-sizing: border-box;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.2);
 }
 
-section .left { 
-    background-color: white;
-    flex: 60%;
+section .left {     
+    flex: 70%;
 }
 
 section .left h1 {
-    background-color: white;
     font-size: 5vh;
     margin-top: 10px;
     padding-left: 5%;
@@ -88,17 +92,17 @@ section .left h1 {
 
 section .left p {
     margin-top: 10px;
-    background-color: white;
     font-size: 20px;
     padding-bottom: 20px;
     padding-left: 5%;
 }
 
-section .contact {
+.container .contact {
     display: flex;
+    background-color: #fff;
 }
 
-section button {
+.container button {
     background-color: black;
     width: 100px;
     color: white;
@@ -111,7 +115,7 @@ section button {
     cursor: pointer; 
 }
 
-section .contact p{
+.container .contact p{
     margin-top: 20px;
     margin-bottom: 30px;
     font-size: 20px;
@@ -121,36 +125,29 @@ section .contact p{
     cursor: pointer;
 }
 
-section .icon {
-    background-color: white;
-    font-size: 40px;
+.container .icon i {
+    background-color: #fff;
+    font-size: 30px;
     margin-top: 10px;
-    margin-right: 30px;
     padding-left: 5%;
     cursor: pointer;
 }
 
-section .right {
-    background-color: white;
-    flex: 40%;
+.container .right {
+    flex: 30%;
     text-align: center;
-
 }
 
-section .right img {
-    background-color: white;
+.container .right img {
     width: 50%;
     margin-top: 10px;
-    border-radius: 20px 20px 0 0;
+    border-radius: 10px 10px 0 0;
 }
 
-section .right h1 {
-    background-color: white;
+.container .right h1 {
     font-weight: bolder;
 }
 
-section .right p {   
-    background-color: white;
-    font-size: 20px;
-    
+.container .right p {   
+    font-size: 20px;   
 }
