--- a/css/style-2.css
+++ b/css/style-2.css
@@ -8,68 +8,15 @@
     background-color: #d0d6d1;
 }
 
-nav, nav ul, nav ul li, .nav-left a, nav ul li img, .nav-right {
-    background-color: #fff;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    height: 10vh;
-    width: 100%;
-}
-
-nav ul {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-}
-
-nav ul li {
-    margin-right: 20px;
-    font-size: 20px;
-}
-.nav-left {
-    margin-left: 5%;
-    flex: 60%; 
-}
-
-.nav-left a {
-    color: black;
-}
-
-nav ul li .home{
-    font-weight: bolder;
-}
-
-nav ul li .myproject{   
-    font-weight: 500;
-}
-
-.nav-right { 
-    flex: 40%;
-    text-align: end;
-    margin-right: 100px;
-}
-
-.nav-right a {
-    background-color: black;
-    width: 80px;
-    color: white;
-    font-size: 20px;
-    padding: 8px 20px;
-    margin-right: -30px;
-    border-radius: 8px;
-}
-
 form {
-    width: 600px;
+    width: 60%;
     margin: 5vh auto auto;
     padding: 20px;
 }
 
 form h1 {
-    font-size: 5vh;
+    font-size: 35px;
+    margin-top: 5%;
     text-align: center;
 }
 
@@ -93,10 +40,6 @@ input, select, textarea {
     font-size: 20px;
 }
 
-select option {
-    font-size: 25px;
-}
-
 button {
     background-color: black;
     color: white;
@@ -109,10 +52,16 @@ button {
 }
 
 .btn {
-    position: relative;
-    left: 82%;
+    float: right;
+    margin-right: -20px;
 }
 
 button:hover {
     background-color: red;
+}
+
+@media only screen and (max-width: 960px) {
+    .form {
+        margin-top: 56px;
+    } 
 }
