--- a/css/style-3.css
+++ b/css/style-3.css
@@ -8,64 +8,10 @@
     background-color: #d0d6d1;
 }
 
-nav, nav ul, nav ul li, .nav-left a, nav ul li img, .nav-right {
-    background-color: #fff;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    height: 10vh;
-    width: 100%;
-}
-
-nav ul {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-}
-
-nav ul li {
-    margin-right: 20px;
-    font-size: 20px;
-}
-.nav-left {
-    margin-left: 5%;
-    flex: 60%; 
-}
-
-.nav-left a {
-    color: black;
-}
-
-nav ul li .home{
-    font-weight: bolder;
-}
-
-nav ul li .myproject{   
-    font-weight: 500;
-}
-
-.nav-right { 
-    flex: 40%;
-    text-align: end;
-    margin-right: 100px;
-}
-
-.nav-right a {
-    background-color: black;
-    width: 80px;
-    color: white;
-    font-size: 20px;
-    padding: 8px 20px;
-    margin-right: -30px;
-    border-radius: 8px;
-}
-
 .project-form {
     display: flex;
     justify-content: center;
-    margin-top: 5vh;
+    margin-top: 5%;
 }
   
 .project-form .form-container {
@@ -74,7 +20,9 @@ nav ul li .myproject{
   
 .project-form .form-container h1 {
     text-align: center;
+    font-size: 35px;
     margin-bottom: 40px;
+    margin-top: 5%;
 }
 
 .form-container label, .checkbox p {
@@ -151,7 +99,7 @@ nav ul li .myproject{
 
 .blog-project-container h1{
     margin-top: 40px;
-    font-size: 3em;
+    font-size: 35px;
     text-align: center;
 }
 
@@ -224,4 +172,10 @@ nav ul li .myproject{
     height: 20px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 960px) {
+    .project {
+        margin-top: 56px;
+    } 
 }
