--- a/css/style-card.css
+++ b/css/style-card.css
@@ -8,60 +8,6 @@
     background-color: #d0d6d1;
 }
 
-nav, nav ul, nav ul li, .nav-left a, nav ul li img, .nav-right {
-    background-color: #fff;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    height: 10vh;
-    width: 100%;
-}
-
-nav ul {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-}
-
-nav ul li {
-    margin-right: 20px;
-    font-size: 20px;
-}
-.nav-left {
-    margin-left: 5%;
-    flex: 60%; 
-}
-
-.nav-left a {
-    color: black;
-}
-
-nav ul li .home{
-    font-weight: bolder;
-}
-
-nav ul li .myproject{   
-    font-weight: 500;
-}
-
-.nav-right { 
-    flex: 40%;
-    text-align: end;
-    margin-right: 100px;
-}
-
-.nav-right a {
-    background-color: black;
-    width: 80px;
-    color: white;
-    font-size: 20px;
-    padding: 8px 20px;
-    margin-right: -30px;
-    border-radius: 8px;
-}
-
 h1 {
     text-align: center;
     margin: 30px 0;
@@ -126,4 +72,10 @@ aside {
 
 article {
     margin: 30px 5% 0;
+}
+
+@media only screen and (max-width: 960px) {
+    h1 {
+        margin-top: 56px;
+    } 
 }
