--- a/css/style.css
+++ b/css/style.css
@@ -8,146 +8,122 @@
     background-color: #d0d6d1;  
 }
 
-nav, nav ul, nav ul li, .nav-left a, nav ul li img, .nav-right {
-    background-color: #fff;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    height: 10vh;
-    width: 100%;
-}
-
-nav ul {
-    display: flex;
-    list-style-type: none;
-    align-items: center;
-}
-
-nav ul li {
-    margin-right: 20px;
-    font-size: 20px;
-}
-.nav-left {
-    margin-left: 5%;
-    flex: 60%; 
-}
-
-.nav-left a {
-    color: black;
-}
-
-nav ul li .home{
-    font-weight: bolder;
-}
-
-nav ul li .myproject{   
-    font-weight: 500;
-}
-
-.nav-right { 
-    flex: 40%;
-    text-align: end;
-    margin-right: 100px;
-}
-
-.nav-right a {
-    background-color: black;
-    width: 80px;
-    color: white;
-    font-size: 20px;
-    padding: 8px 20px;
-    margin-right: -30px;
-    border-radius: 8px;
+.container, #about,#id-card,.left,.right, #about h1, #about p, #id-card, #id-card h1, #id-card p,.contact, .icon,.icon i, #id-card img  {
+    background: #fff;
 }
 
 .container {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 5vh;
-    height: 80vh;
-}
-
-section,section .left, section h1, section .right, section .icon, section .right img, section p {
-    background-color: #fff;
-}
-
-section{  
-    display: flex;
     width: 90%;
+    margin: 10% 5% 3%;
     box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.2);
 }
 
-section .left {     
-    flex: 70%;
+#about { 
+    flex: 60%; 
 }
 
-section .left h1 {
-    font-size: 5vh;
+#about h1 {
     margin-top: 10px;
     padding-left: 5%;
+    padding-top: 2%;
 }
 
-section .left p {
+#about p {
     margin-top: 10px;
     font-size: 20px;
     padding-bottom: 20px;
     padding-left: 5%;
+    text-align: justify;
+    margin-bottom: 3%;
 }
 
-.container .contact {
-    display: flex;
-    background-color: #fff;
-}
-
-.container button {
-    background-color: black;
-    width: 100px;
+.btn {
+    display: inline-flex;
+    justify-content: center;
+    background-color: #333;
+    width: 80px;
+    height: 30px;
     color: white;
-    padding: 10px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    margin-left: 5%;
     font-size: 20px;
+    padding: 5px 10px;
     border-radius: 20px;
-    cursor: pointer; 
 }
 
-.container .contact p{
-    margin-top: 20px;
-    margin-bottom: 30px;
+.btn a {
+    background-color: #333;
+    color: #fff;
+}
+
+.contact {
+    margin-left: 5%;
+}
+
+.contact p{
+    display: inline-flex;
     font-size: 20px;
-    position: relative;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    cursor: pointer;
 }
 
-.container .icon i {
+.contact i {
+    margin-left: 5px;
     background-color: #fff;
-    font-size: 30px;
-    margin-top: 10px;
-    padding-left: 5%;
+    font-size: 20px;
     cursor: pointer;
 }
 
-.container .right {
-    flex: 30%;
-    text-align: center;
+.icon {
+    margin-top: 3%;
+    margin-left: 5%;
 }
 
-.container .right img {
+.icon i {
+    font-size: 30px;
+    margin-left: 1%;
+    cursor: pointer;
+}
+
+#id-card {
+    text-align: center;
+    flex: 30%;
+    box-sizing: border-box;
+}
+
+.right img {
     width: 50%;
-    margin-top: 10px;
+    padding-top: 5px;
     border-radius: 10px 10px 0 0;
 }
 
-.container .right h1 {
+.right h1 {
     font-weight: bolder;
 }
 
-.container .right p {   
+.right p {   
     font-size: 20px;   
+}
+
+@media only screen and (max-width: 960px) {
+    .container {
+        margin-top: 100px;
+        flex-direction: column;
+    }
+    #about h1{
+        font-size: larger;
+        margin: 10px 10px;
+    }
+    #about p{
+        font-size: small;
+        margin: 10px 25px 25px 10px;
+        text-align: justify;
+    }
+    .icon {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 10% 25%;
+    }
+    .contact {
+        margin-bottom: -50px;
+    }
 }
