--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,15 @@
     padding: 0;
     font-family: 'EB Garamond','Playfair Display', serif;
     text-decoration: none;   
-    background-color: #d0d6d1;  
+    background-color: #e3e7eb;  
+}
+
+nav ul li .home {
+    font-weight: bolder;
+}
+
+nav ul li .myproject, nav ul li .testimonials {   
+    font-weight: 500;
 }
 
 .container, #about,#id-card,.left,.right, #about h1, #about p, #id-card, #id-card h1, #id-card p,.contact, .icon,.icon i, #id-card img  {
@@ -91,7 +99,7 @@
 
 .right img {
     width: 50%;
-    padding-top: 5px;
+    padding-top: 20px;
     border-radius: 10px 10px 0 0;
 }
 
@@ -103,9 +111,10 @@
     font-size: 20px;   
 }
 
-@media only screen and (max-width: 960px) {
+@media screen and (max-width: 991px) {
+    /* memulai gaya tablet besar */
     .container {
-        margin-top: 100px;
+        margin-top: 120px;
         flex-direction: column;
     }
     #about h1{
@@ -113,17 +122,36 @@
         margin: 10px 10px;
     }
     #about p{
-        font-size: small;
+        font-size: medium;
         margin: 10px 25px 25px 10px;
         text-align: justify;
+    }
+    .contact {
+        margin-bottom: 20px;
+    }
+    .right img {
+        margin-top: 50px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    /* awal gaya ponsel */
+    .container {
+        margin-top: 100px;
+    }
+    #about h1 {
+        margin-bottom: 5%;
     }
     .icon {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        padding: 10% 25%;
+        padding: 15% 20% 5% 15%;
     }
     .contact {
         margin-bottom: -50px;
+    }
+    .right img {
+        margin-top: 0;
     }
 }
