--- a/css/style-card.css
+++ b/css/style-card.css
@@ -5,7 +5,7 @@
     padding: 0;
     font-family: 'EB Garamond','Playfair Display', serif;
     text-decoration: none;   
-    background-color: #d0d6d1;
+    background-color:#e3e7eb;
 }
 
 h1 {
