--- a/css/myproject.css
+++ b/css/myproject.css
@@ -110,20 +110,23 @@ nav ul li .myproject{
 
 .blog-project-container h1{
     margin-top: 40px;
+    margin-bottom: 20px;
     font-size: 35px;
     text-align: center;
 }
 
 .blog-project-container .blog-contents {
-    padding: 50px auto;
+    width: 90%;
+    margin-left: 5%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 10px;
+    justify-content: flex-start;
+    grid-auto-flow: dense;
 }
 
 .blog-project-container .blog-card {
     margin-top: 30px;
-    margin-left: 5%;
     width: 300px;
     border-radius: 10px;
     box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.2);
